style: more attempts at overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,6 +5,15 @@
 
 html {
     position: relative;
+
+    // responsive to tablet
+    @media only screen and (max-width: $tablet) {
+        &.nav-open {
+            overflow: hidden;
+            max-height: 100vh !important;
+            max-width: 100vw !important;
+        }
+    }
 }
 
 // default body styles
@@ -618,7 +627,7 @@ footer {
                 top: 20px;
                 height: calc(100vh - 20px);
                 padding: 5% 0;
-                width: 100vw;
+                width: 100%;
                 background-color: rgba($black, 0.95);
 
                 * {
